# QwenForge

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  start_forge.bat  update_and_install.bat
apps/backend/: Dockerfile  pyproject.toml
apps/backend/alembic/versions/: 0001_initial.py
apps/backend/app/: main.py
apps/backend/app/agents/: policy.py
apps/backend/app/api/: routes.py
apps/backend/app/core/: config.py  network_policy.py
apps/backend/app/db/: session.py
apps/backend/app/inference/: adapters.py  base.py  openai_compatible.py
apps/backend/app/models/: entities.py
apps/backend/app/schemas/: contracts.py
apps/backend/app/services/: jobs.py  templates.py
apps/backend/app/workers/: runner.py
apps/frontend/: package.json  tailwind.config.ts
apps/frontend/app/: globals.css  layout.tsx  page.tsx
apps/frontend/components/: query-provider.tsx  shell.tsx
apps/frontend/lib/: api.ts
apps/frontend/store/: useForgeStore.ts
apps/frontend/types/: contracts.ts
docs/: architecture.md  job-types.md  model-setup.md  roadmap.md  security.md
