[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forge-backend"
version = "0.1.0"
description = "Forge backend API and job orchestrator"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "sqlmodel>=0.0.22",
  "alembic>=1.13.0",
  "psycopg[binary]>=3.2.0",
  "redis>=5.0.0",
  "dramatiq[redis]>=1.16.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.4.0",
  "orjson>=3.10.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
